automated commit #1694